# analyzer

./: .gitignore  CMakeLists.txt  README.md  analyzer.cpp  analyzer.pro  controller.cpp  controller.h  detector.h  graph.cpp  graph.h  graphcanvas.cpp  idao.h  identifymethod.h  iidentifier.h  iview.h  mainwidget.cpp  mainwidget.h  model.cpp  model.h  nuclidelibrary.cpp  nuclidelibrary.h  observer.h  simulator.cpp  simulator.h  test_tfidentifier.cpp  tfidentifier.cpp  tfidentifier.h  types.h  view.cpp  view.h
analyzer/: CMakeLists.txt  analyzer.cpp  controller.cpp  controller.h  deconvmethod.h  detectoraccess.h  graph.cpp  graph.h  graphcanvas.h  mainwidget.h  mathutils.cpp  mathutils.h  mlidentifier.h  model.cpp  model.h  nuclidelibrary.cpp  nuclidelibrary.h  observer.h  session.cpp  session.h  simplemethod.h  simulator.cpp  simulator.h  tcpaccess.cpp  tcpaccess.h  tcpserver.cpp  tcpserver.h  tcpserverthread.cpp  tcpserverthread.h  types.h
data/: Am241.spe  Ba133.spe  Co60.spe  Cs137_15_OSGI.spe  Eu152.spe  Th228.spe  nuclidelibrary.json  nuclidelibrary2.json
detector/: CMakeLists.txt  detector.cpp  detectorgraph.cpp  detectorgraph.h  detectorwidget.cpp  detectorwidget.h  mathutils.cpp  mathutils.h
matlab/: LOAD_data_LaBr3.asv  LOAD_data_LaBr3.m  LOAD_data_NaI.m  LOAD_data_OSGI.m  LOAD_data_SrI2.m  f_LoadLsrmSpeFile.m  f_calcEfficiency.m  f_calcEnergyFwhm.m  f_channelByEnergy.m  f_gaussian.m  f_simulateSpectrum.m  f_substrateModel.m  generate_train_data.m  integr_tests.m  library.m  main.asv  main.m
ml/: analyzer.ipynb
ml/saved_model/: keras_metadata.pb  saved_model.pb
src/: analyzer.cpp  main.cpp
src/analyzer/: CMakeLists.txt  analyzer.pro  main.cpp
src/analyzer/ctrl/: controller.cpp  controller.h
src/analyzer/model/: analyzer.cpp  analyzer.h
src/analyzer/model/idf/: convneuralnet.cpp  convneuralnet.h  deconvolution.h  maxpolling.h  method.h
src/analyzer/view/: mainwidget.cpp  mainwidget.h  spectrumnuclides.cpp  spectrumnuclides.h  viewinfoupdater.h
src/ctrl/: controller.cpp  controller.h
src/dao/: detectoraccess.h  simulator.cpp  simulator.h  simulatoraccess.cpp  simulatoraccess.h  spectrummeasured.cpp  spectrummeasured.h  spectrummodeling.cpp  spectrummodeling.h  tcpserverthread.h
src/detector/: CMakeLists.txt  detector.pro  main.cpp
src/detector/ctrl/: controller.cpp  controller.h
src/detector/model/: engine.cpp  engine.h  modes.h
src/detector/view/: mainwidget.cpp  mainwidget.h  measuredwidget.cpp  measuredwidget.h  modelingwidget.cpp  modelingwidget.h  sliderwithlabel.cpp  sliderwithlabel.h
src/model/: analyzer.cpp  analyzer.h  convneuralnet.cpp  convneuralnet.h  deconvolution.h  identifymethod.h  maxpolling.h  method.h  model.cpp  model.h  nuclidelibrary.cpp  nuclidelibrary.h
src/sim/: engine.cpp  engine.h  generator.h  measured.cpp  measured.h  modeling.cpp  modeling.h  simulator.cpp  simulator.h  simulatorgraph.cpp  simulatorwidget.cpp  simulatorwidget.h  sliderwithlabel.cpp  spectrummeasured.cpp  spectrummeasured.h  spectrummodeling.h
src/simgui/: simulatorgraph.h  simulatorwidget.cpp  simulatorwidget.h  sliderwithlabel.h
src/simulator/: generator.h  measured.cpp  measured.h  modeling.cpp  modeling.h  simulator.cpp  simulator.h
src/utils/: mathutils.cpp  mathutils.h  types.h  utils.cpp  utils.h
src/utils/graph/: canvas.cpp  canvas.h  spectrumonly.cpp  spectrumonly.h
src/utils/matlab/: matlab.cpp  matlab.h
src/utils/nuclidelibrary/: nuclidelibrary.cpp  nuclidelibrary.h
src/utils/recv/: datareceiver.h  simulatorreceiver.cpp  simulatorreceiver.h  udpreceiver.cpp  udpreceiver.h
src/utils/udp/: client.cpp  client.h  server.cpp  server.h  serverthread.cpp  serverthread.h
src/view/: graph.h  mainwidget.cpp  mainwidget.h  observer.h  view.h
tests/: CMakeLists.txt  test_convneuralnet.cpp  test_tfidentifier.cpp  test_utilsmath.cpp
